--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -125,7 +125,6 @@ header{
 .footerContainer{
   background-color: black;
   color: white;
-  padding-top: 6em;
   padding-bottom: 1em;
 }
 
