--- a/src/app/doodles/doodles.component.css
+++ b/src/app/doodles/doodles.component.css
@@ -2,6 +2,7 @@
     background-color: black;
     color: white;
     padding-top: 6rem;
+    padding-bottom: 4rem;
 }
 
 .doodle-title{
